--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,6 +201,9 @@ jobs:
       - run: npm install -g node@14 --force
       - checkout
       - restore_dependency_cache
+      - run: npm install
+      - run: npm run bootstrap -- --ci
+      - run: npm run build --prefix=packages/playwright
       - run: npm run coverage --prefix=packages/playwright
 
   axe-core-test:
