--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@axe-core/webdriverjs": "^4.4.3",
     "axe-core": "^4.4.2",
-    "chromedriver": "^103.0.0",
+    "chromedriver": "latest",
     "colors": "^1.4.0",
     "commander": "^9.3.0",
     "selenium-webdriver": "4.3.0"
