--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -39,8 +39,7 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "axe-core": "^4.4.2",
-    "playwright": ">= 1.0.0"
+    "axe-core": "^4.4.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
@@ -53,6 +52,8 @@
     "express": "^4.18.1",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
+    "playwright": "^1.0.0",
+    "playwright-core": "^1.25.2",
     "rimraf": "^3.0.2",
     "test-listen": "^1.1.0",
     "ts-node": "^10.8.2",
