--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -47,7 +47,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.3",
     "@types/test-listen": "^1.1.0",
-    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures",
     "chai": "^4.3.6",
     "express": "^4.18.1",
     "mocha": "^10.0.0",
