--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -66,7 +66,7 @@
     "@types/selenium-webdriver": "^4.1.1",
     "@types/sinon": "^10.0.12",
     "@types/test-listen": "^1.1.0",
-    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures",
     "chai": "^4.3.6",
     "chaimocha": "^1.10.0",
     "chromedriver": "^104.0.0",
