--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,24 +21,24 @@ jobs:
       - run: npm run bootstrap -- --ci
       - run: npm run lint
 
-  puppeteer:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node}}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/puppeteer
-      - run: npm run coverage --prefix=packages/puppeteer
-      - run: npm run test:esm --prefix=packages/puppeteer
+  # puppeteer:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node}}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/puppeteer
+  #     - run: npm run coverage --prefix=packages/puppeteer
+  #     - run: npm run test:esm --prefix=packages/puppeteer
 
   cli:
     strategy:
@@ -48,7 +48,6 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v3
-      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
@@ -66,109 +65,109 @@ jobs:
         working-directory: packages/cli
       - run: npm run coverage --prefix=packages/cli
 
-  webdriverjs:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/webdriverjs
-      - run: npm run coverage --prefix=packages/webdriverjs
-      - run: npm run test:esm --prefix=packages/webdriverjs
+  # webdriverjs:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/webdriverjs
+  #     - run: npm run coverage --prefix=packages/webdriverjs
+  #     - run: npm run test:esm --prefix=packages/webdriverjs
 
-  webdriverio:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/webdriverio
-      - run: npm run coverage --prefix=packages/webdriverio
-      - run: npm run test:esm --prefix=packages/webdriverio
+  # webdriverio:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/webdriverio
+  #     - run: npm run coverage --prefix=packages/webdriverio
+  #     - run: npm run test:esm --prefix=packages/webdriverio
 
-  reporter_earl:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/reporter-earl
-      - run: npm run test --prefix=packages/reporter-earl
-      - run: npm run test:esm --prefix=packages/reporter-earl
+  # reporter_earl:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/reporter-earl
+  #     - run: npm run test --prefix=packages/reporter-earl
+  #     - run: npm run test:esm --prefix=packages/reporter-earl
 
-  react:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/react
-      - run: npm run test --prefix=packages/react
-      - run: npm run test:esm --prefix=packages/react
+  # react:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/react
+  #     - run: npm run test --prefix=packages/react
+  #     - run: npm run test:esm --prefix=packages/react
 
-  playwright:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npx playwright install --with-deps
-      - run: npm run build --prefix=packages/playwright
-      - run: npm run coverage --prefix=packages/playwright
-      - run: npm run test:esm --prefix=packages/playwright
+  # playwright:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npx playwright install --with-deps
+  #     - run: npm run build --prefix=packages/playwright
+  #     - run: npm run coverage --prefix=packages/playwright
+  #     - run: npm run test:esm --prefix=packages/playwright
 
-  axe_core_test:
-    if: github.ref_name == 'master' || startsWith(github.ref_name, 'release')
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm test --prefix=axe_core_test
+  # axe_core_test:
+  #   if: github.ref_name == 'master' || startsWith(github.ref_name, 'release')
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm test --prefix=axe_core_test
