--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,11 +2,11 @@ name: Tests
 
 on: [push]
 
-env:
-  # Set the path to use the latest version of chromedriver not the node_modules version.
-  # https://github.com/dequelabs/axe-core-npm/blob/develop/packages/webdriverjs/test/test-utils.ts#L11
-  # https://github.com/dequelabs/axe-core-npm/blob/develop/packages/webdriverio/test/axe-webdriverio.spec.ts#L57
-  CHROMEDRIVER_PATH: /usr/local/bin/chromedriver
+# env:
+#   # Set the path to use the latest version of chromedriver not the node_modules version.
+#   # https://github.com/dequelabs/axe-core-npm/blob/develop/packages/webdriverjs/test/test-utils.ts#L11
+#   # https://github.com/dequelabs/axe-core-npm/blob/develop/packages/webdriverio/test/axe-webdriverio.spec.ts#L57
+#   CHROMEDRIVER_PATH: /usr/local/bin/chromedriver
 
 jobs:
   lint:
@@ -40,7 +40,32 @@ jobs:
   #     - run: npm run coverage --prefix=packages/puppeteer
   #     - run: npm run test:esm --prefix=packages/puppeteer
 
-  cli:
+  # cli:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #       # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
+  #     - shell: 'script -q -e -c "bash {0}"'
+  #       run: npx browser-driver-manager install chromedriver --verbose
+  #       working-directory: packages/cli
+  #     # Re-build packages, ensuring packages/webdriverjs/dist exists.
+  #     - run: npx lerna run prepare
+  #     # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
+  #     - run: npx lerna link
+  #       working-directory: packages/cli
+  #     - run: npm run coverage --prefix=packages/cli
+
+  webdriverjs:
     strategy:
       matrix:
         node: [16, 18, 20]
@@ -54,54 +79,35 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run bootstrap -- --ci
-        # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
+      # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
       - shell: 'script -q -e -c "bash {0}"'
         run: npx browser-driver-manager install chromedriver --verbose
-        working-directory: packages/cli
-      # Re-build packages, ensuring packages/webdriverjs/dist exists.
-      - run: npx lerna run prepare
-      # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
-      - run: npx lerna link
-        working-directory: packages/cli
-      - run: npm run coverage --prefix=packages/cli
+        working-directory: packages/webdriverjs
+      - run: npm run build --prefix=packages/webdriverjs
+      - run: npm run coverage --prefix=packages/webdriverjs
+      - run: npm run test:esm --prefix=packages/webdriverjs
 
-  # webdriverjs:
-  #   strategy:
-  #     matrix:
-  #       node: [16, 18, 20]
-  #   runs-on: ubuntu-latest
-  #   needs: lint
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: ${{ matrix.node }}
-  #         cache: 'npm'
-  #     - run: npm ci
-  #     - run: npm run bootstrap -- --ci
-  #     - run: npm run build --prefix=packages/webdriverjs
-  #     - run: npm run coverage --prefix=packages/webdriverjs
-  #     - run: npm run test:esm --prefix=packages/webdriverjs
-
-  # webdriverio:
-  #   strategy:
-  #     matrix:
-  #       node: [16, 18, 20]
-  #   runs-on: ubuntu-latest
-  #   needs: lint
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: ${{ matrix.node }}
-  #         cache: 'npm'
-  #     - run: npm ci
-  #     - run: npm run bootstrap -- --ci
-  #     - run: npm run build --prefix=packages/webdriverio
-  #     - run: npm run coverage --prefix=packages/webdriverio
-  #     - run: npm run test:esm --prefix=packages/webdriverio
+  webdriverio:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run bootstrap -- --ci
+      # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
+      - shell: 'script -q -e -c "bash {0}"'
+        run: npx browser-driver-manager install chromedriver --verbose
+        working-directory: packages/webdriverio
+      - run: npm run build --prefix=packages/webdriverio
+      - run: npm run coverage --prefix=packages/webdriverio
+      - run: npm run test:esm --prefix=packages/webdriverio
 
   # reporter_earl:
   #   strategy:
