--- a/.github/workflows/auto-patch-release.yml
+++ b/.github/workflows/auto-patch-release.yml
@@ -4,7 +4,6 @@ on:
     # Run every Thursday right before midnight
     - cron: '59 23 * * 4'
   workflow_dispatch:
-  pull_request:
 jobs:
   create_patch_release:
     name: Create release
@@ -26,4 +25,4 @@ jobs:
           odd_release: 'true'
           release-command: bash .github/scripts/prepare_release.sh
           release-branch: master
-          default-branch: ci-patch-thrusday
+          default-branch: develop
